y.output
   0  $accept : Program $end

   1  Program : Meth_list
   2          |

   3  Meth_list : Meth Meth_list
   4            | Meth

   5  Meth : Type ID '(' Params ')' Body

   6  Params : Formals Type ID
   7         |

   8  Formals : Formals Type ID ','
   9          |

  10  Type : INT

  11  Body : '{' Decls Stmts '}'

  12  Decls : Decl_list Decl
  13        |

  14  Decl_list : Decl_list Decl
  15            |

  16  Decl : Type ID Vars ';'
  17       | Type ID '=' Expr Vars ';'

  18  Vars : ',' ID Vars
  19       | ',' ID '=' Expr Vars
  20       |

  21  Stmts : Stmts Stmt
  22        |

  23  Stmt : Assign ';'
  24       | RETURN Expr ';'
  25       | IF '(' Expr ')' Stmt ELSE Stmt
  26       | WHILE '(' Expr ')' Stmt
  27       | BREAK ';'
  28       | Block
  29       | ';'

  30  Block : '{' Stmts '}'

  31  Assign : Location '=' Expr

  32  Location : ID

  33  Method : ID

  34  Expr : Add_expr Relop Add_expr
  35       | Add_expr

  36  Relop : LE
  37        | '<'
  38        | '>'
  39        | GE
  40        | EQ
  41        | NE

  42  Add_expr : Add_expr Addop Term
  43           | Term

  44  Addop : '+'
  45        | '-'

  46  Term : Term Mulop Factor
  47       | Factor

  48  Mulop : '*'
  49        | '/'

  50  Factor : '(' Expr ')'
  51         | Location
  52         | NUM
  53         | '-' NUM
  54         | TRUE
  55         | FALSE
  56         | Method '(' Actuals ')'

  57  Actuals : Args Expr
  58          |

  59  Args : Args Expr ','
  60       |

state 0
	$accept : . Program $end  (0)
	Program : .  (2)

	INT  shift 1
	$end  reduce 2

	Program  goto 2
	Meth_list  goto 3
	Meth  goto 4
	Type  goto 5


state 1
	Type : INT .  (10)

	.  reduce 10


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : Meth_list .  (1)

	.  reduce 1


state 4
	Meth_list : Meth . Meth_list  (3)
	Meth_list : Meth .  (4)

	INT  shift 1
	$end  reduce 4

	Meth_list  goto 6
	Meth  goto 4
	Type  goto 5


state 5
	Meth : Type . ID '(' Params ')' Body  (5)

	ID  shift 7
	.  error


state 6
	Meth_list : Meth Meth_list .  (3)

	.  reduce 3


state 7
	Meth : Type ID . '(' Params ')' Body  (5)

	'('  shift 8
	.  error


state 8
	Meth : Type ID '(' . Params ')' Body  (5)
	Params : .  (7)
	Formals : .  (9)

	INT  reduce 9
	')'  reduce 7

	Params  goto 9
	Formals  goto 10


state 9
	Meth : Type ID '(' Params . ')' Body  (5)

	')'  shift 11
	.  error


state 10
	Params : Formals . Type ID  (6)
	Formals : Formals . Type ID ','  (8)

	INT  shift 1
	.  error

	Type  goto 12


state 11
	Meth : Type ID '(' Params ')' . Body  (5)

	'{'  shift 13
	.  error

	Body  goto 14


state 12
	Params : Formals Type . ID  (6)
	Formals : Formals Type . ID ','  (8)

	ID  shift 15
	.  error


state 13
	Body : '{' . Decls Stmts '}'  (11)
	Decls : .  (13)
	Decl_list : .  (15)

	IF  reduce 13
	WHILE  reduce 13
	INT  reduce 15
	RETURN  reduce 13
	BREAK  reduce 13
	'{'  reduce 13
	'}'  reduce 13
	';'  reduce 13
	ID  reduce 13

	Decls  goto 16
	Decl_list  goto 17


state 14
	Meth : Type ID '(' Params ')' Body .  (5)

	.  reduce 5


state 15
	Params : Formals Type ID .  (6)
	Formals : Formals Type ID . ','  (8)

	','  shift 18
	')'  reduce 6


state 16
	Body : '{' Decls . Stmts '}'  (11)
	Stmts : .  (22)

	.  reduce 22

	Stmts  goto 19


state 17
	Decls : Decl_list . Decl  (12)
	Decl_list : Decl_list . Decl  (14)

	INT  shift 1
	.  error

	Type  goto 20
	Decl  goto 21


state 18
	Formals : Formals Type ID ',' .  (8)

	.  reduce 8


state 19
	Body : '{' Decls Stmts . '}'  (11)
	Stmts : Stmts . Stmt  (21)

	IF  shift 22
	WHILE  shift 23
	RETURN  shift 24
	BREAK  shift 25
	'{'  shift 26
	'}'  shift 27
	';'  shift 28
	ID  shift 29
	.  error

	Stmt  goto 30
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 20
	Decl : Type . ID Vars ';'  (16)
	Decl : Type . ID '=' Expr Vars ';'  (17)

	ID  shift 34
	.  error


state 21
	Decls : Decl_list Decl .  (12)
	Decl_list : Decl_list Decl .  (14)

	IF  reduce 12
	WHILE  reduce 12
	INT  reduce 14
	RETURN  reduce 12
	BREAK  reduce 12
	'{'  reduce 12
	'}'  reduce 12
	';'  reduce 12
	ID  reduce 12


state 22
	Stmt : IF . '(' Expr ')' Stmt ELSE Stmt  (25)

	'('  shift 35
	.  error


state 23
	Stmt : WHILE . '(' Expr ')' Stmt  (26)

	'('  shift 36
	.  error


state 24
	Stmt : RETURN . Expr ';'  (24)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 44
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 25
	Stmt : BREAK . ';'  (27)

	';'  shift 49
	.  error


state 26
	Block : '{' . Stmts '}'  (30)
	Stmts : .  (22)

	.  reduce 22

	Stmts  goto 50


state 27
	Body : '{' Decls Stmts '}' .  (11)

	.  reduce 11


state 28
	Stmt : ';' .  (29)

	.  reduce 29


state 29
	Location : ID .  (32)

	.  reduce 32


state 30
	Stmts : Stmts Stmt .  (21)

	.  reduce 21


state 31
	Stmt : Assign . ';'  (23)

	';'  shift 51
	.  error


state 32
	Stmt : Block .  (28)

	.  reduce 28


state 33
	Assign : Location . '=' Expr  (31)

	'='  shift 52
	.  error


state 34
	Decl : Type ID . Vars ';'  (16)
	Decl : Type ID . '=' Expr Vars ';'  (17)
	Vars : .  (20)

	','  shift 53
	'='  shift 54
	';'  reduce 20

	Vars  goto 55


state 35
	Stmt : IF '(' . Expr ')' Stmt ELSE Stmt  (25)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 56
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 36
	Stmt : WHILE '(' . Expr ')' Stmt  (26)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 57
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 37
	Factor : FALSE .  (55)

	.  reduce 55


state 38
	Factor : TRUE .  (54)

	.  reduce 54


state 39
	Factor : NUM .  (52)

	.  reduce 52


state 40
	Factor : '(' . Expr ')'  (50)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 58
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 41
	Factor : '-' . NUM  (53)

	NUM  shift 59
	.  error


state 42
	Location : ID .  (32)
	Method : ID .  (33)

	LE  reduce 32
	GE  reduce 32
	EQ  reduce 32
	NE  reduce 32
	'('  reduce 33
	')'  reduce 32
	';'  reduce 32
	','  reduce 32
	'*'  reduce 32
	'/'  reduce 32
	'+'  reduce 32
	'-'  reduce 32
	'<'  reduce 32
	'>'  reduce 32


state 43
	Factor : Location .  (51)

	.  reduce 51


state 44
	Stmt : RETURN Expr . ';'  (24)

	';'  shift 60
	.  error


state 45
	Factor : Method . '(' Actuals ')'  (56)

	'('  shift 61
	.  error


state 46
	Expr : Add_expr . Relop Add_expr  (34)
	Expr : Add_expr .  (35)
	Add_expr : Add_expr . Addop Term  (42)

	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	'+'  shift 66
	'-'  shift 67
	'<'  shift 68
	'>'  shift 69
	')'  reduce 35
	';'  reduce 35
	','  reduce 35

	Relop  goto 70
	Addop  goto 71


state 47
	Add_expr : Term .  (43)
	Term : Term . Mulop Factor  (46)

	'*'  shift 72
	'/'  shift 73
	LE  reduce 43
	GE  reduce 43
	EQ  reduce 43
	NE  reduce 43
	')'  reduce 43
	';'  reduce 43
	','  reduce 43
	'+'  reduce 43
	'-'  reduce 43
	'<'  reduce 43
	'>'  reduce 43

	Mulop  goto 74


state 48
	Term : Factor .  (47)

	.  reduce 47


state 49
	Stmt : BREAK ';' .  (27)

	.  reduce 27


state 50
	Stmts : Stmts . Stmt  (21)
	Block : '{' Stmts . '}'  (30)

	IF  shift 22
	WHILE  shift 23
	RETURN  shift 24
	BREAK  shift 25
	'{'  shift 26
	'}'  shift 75
	';'  shift 28
	ID  shift 29
	.  error

	Stmt  goto 30
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 51
	Stmt : Assign ';' .  (23)

	.  reduce 23


state 52
	Assign : Location '=' . Expr  (31)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 76
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 53
	Vars : ',' . ID Vars  (18)
	Vars : ',' . ID '=' Expr Vars  (19)

	ID  shift 77
	.  error


state 54
	Decl : Type ID '=' . Expr Vars ';'  (17)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 78
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 55
	Decl : Type ID Vars . ';'  (16)

	';'  shift 79
	.  error


state 56
	Stmt : IF '(' Expr . ')' Stmt ELSE Stmt  (25)

	')'  shift 80
	.  error


state 57
	Stmt : WHILE '(' Expr . ')' Stmt  (26)

	')'  shift 81
	.  error


state 58
	Factor : '(' Expr . ')'  (50)

	')'  shift 82
	.  error


state 59
	Factor : '-' NUM .  (53)

	.  reduce 53


state 60
	Stmt : RETURN Expr ';' .  (24)

	.  reduce 24


state 61
	Factor : Method '(' . Actuals ')'  (56)
	Actuals : .  (58)
	Args : .  (60)

	FALSE  reduce 60
	TRUE  reduce 60
	NUM  reduce 60
	'('  reduce 60
	')'  reduce 58
	'-'  reduce 60
	ID  reduce 60

	Actuals  goto 83
	Args  goto 84


state 62
	Relop : LE .  (36)

	.  reduce 36


state 63
	Relop : GE .  (39)

	.  reduce 39


state 64
	Relop : EQ .  (40)

	.  reduce 40


state 65
	Relop : NE .  (41)

	.  reduce 41


state 66
	Addop : '+' .  (44)

	.  reduce 44


state 67
	Addop : '-' .  (45)

	.  reduce 45


state 68
	Relop : '<' .  (37)

	.  reduce 37


state 69
	Relop : '>' .  (38)

	.  reduce 38


state 70
	Expr : Add_expr Relop . Add_expr  (34)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Method  goto 45
	Add_expr  goto 85
	Term  goto 47
	Factor  goto 48


state 71
	Add_expr : Add_expr Addop . Term  (42)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Method  goto 45
	Term  goto 86
	Factor  goto 48


state 72
	Mulop : '*' .  (48)

	.  reduce 48


state 73
	Mulop : '/' .  (49)

	.  reduce 49


state 74
	Term : Term Mulop . Factor  (46)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Method  goto 45
	Factor  goto 87


state 75
	Block : '{' Stmts '}' .  (30)

	.  reduce 30


state 76
	Assign : Location '=' Expr .  (31)

	.  reduce 31


state 77
	Vars : ',' ID . Vars  (18)
	Vars : ',' ID . '=' Expr Vars  (19)
	Vars : .  (20)

	','  shift 53
	'='  shift 88
	';'  reduce 20

	Vars  goto 89


state 78
	Decl : Type ID '=' Expr . Vars ';'  (17)
	Vars : .  (20)

	','  shift 53
	';'  reduce 20

	Vars  goto 90


state 79
	Decl : Type ID Vars ';' .  (16)

	.  reduce 16


state 80
	Stmt : IF '(' Expr ')' . Stmt ELSE Stmt  (25)

	IF  shift 22
	WHILE  shift 23
	RETURN  shift 24
	BREAK  shift 25
	'{'  shift 26
	';'  shift 28
	ID  shift 29
	.  error

	Stmt  goto 91
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 81
	Stmt : WHILE '(' Expr ')' . Stmt  (26)

	IF  shift 22
	WHILE  shift 23
	RETURN  shift 24
	BREAK  shift 25
	'{'  shift 26
	';'  shift 28
	ID  shift 29
	.  error

	Stmt  goto 92
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 82
	Factor : '(' Expr ')' .  (50)

	.  reduce 50


state 83
	Factor : Method '(' Actuals . ')'  (56)

	')'  shift 93
	.  error


state 84
	Actuals : Args . Expr  (57)
	Args : Args . Expr ','  (59)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 94
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 85
	Expr : Add_expr Relop Add_expr .  (34)
	Add_expr : Add_expr . Addop Term  (42)

	'+'  shift 66
	'-'  shift 67
	')'  reduce 34
	';'  reduce 34
	','  reduce 34

	Addop  goto 71


state 86
	Add_expr : Add_expr Addop Term .  (42)
	Term : Term . Mulop Factor  (46)

	'*'  shift 72
	'/'  shift 73
	LE  reduce 42
	GE  reduce 42
	EQ  reduce 42
	NE  reduce 42
	')'  reduce 42
	';'  reduce 42
	','  reduce 42
	'+'  reduce 42
	'-'  reduce 42
	'<'  reduce 42
	'>'  reduce 42

	Mulop  goto 74


state 87
	Term : Term Mulop Factor .  (46)

	.  reduce 46


state 88
	Vars : ',' ID '=' . Expr Vars  (19)

	FALSE  shift 37
	TRUE  shift 38
	NUM  shift 39
	'('  shift 40
	'-'  shift 41
	ID  shift 42
	.  error

	Location  goto 43
	Expr  goto 95
	Method  goto 45
	Add_expr  goto 46
	Term  goto 47
	Factor  goto 48


state 89
	Vars : ',' ID Vars .  (18)

	.  reduce 18


state 90
	Decl : Type ID '=' Expr Vars . ';'  (17)

	';'  shift 96
	.  error


state 91
	Stmt : IF '(' Expr ')' Stmt . ELSE Stmt  (25)

	ELSE  shift 97
	.  error


state 92
	Stmt : WHILE '(' Expr ')' Stmt .  (26)

	.  reduce 26


state 93
	Factor : Method '(' Actuals ')' .  (56)

	.  reduce 56


state 94
	Actuals : Args Expr .  (57)
	Args : Args Expr . ','  (59)

	','  shift 98
	')'  reduce 57


state 95
	Vars : ',' ID '=' Expr . Vars  (19)
	Vars : .  (20)

	','  shift 53
	';'  reduce 20

	Vars  goto 99


state 96
	Decl : Type ID '=' Expr Vars ';' .  (17)

	.  reduce 17


state 97
	Stmt : IF '(' Expr ')' Stmt ELSE . Stmt  (25)

	IF  shift 22
	WHILE  shift 23
	RETURN  shift 24
	BREAK  shift 25
	'{'  shift 26
	';'  shift 28
	ID  shift 29
	.  error

	Stmt  goto 100
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 98
	Args : Args Expr ',' .  (59)

	.  reduce 59


state 99
	Vars : ',' ID '=' Expr Vars .  (19)

	.  reduce 19


state 100
	Stmt : IF '(' Expr ')' Stmt ELSE Stmt .  (25)

	.  reduce 25


29 terminals, 27 nonterminals
61 grammar rules, 101 states
